--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,8 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+#avatar: "/img/avatar-icon.png"
+avatar: "/img/Martin Stufi GS.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -49,7 +50,7 @@ author:
   github: stufim    # eg. daattali
   twitter: stufim   # eg. daattali
   reddit: yourname    # eg. daattali
-  google-plus: +martin.stufi   # eg. +DeanAttali or 109424658772469020925
+  google-plus: 115106511111218447171   # eg. +DeanAttali or 109424658772469020925
   linkedin: martinstufi  # eg. daattali
   xing: yourname      # eg. daattali
   stackoverflow: yourlink  # eg. "3943160/daattali"
