--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/img/avatar-icon.png"
-avatar: "/img/MartinStufiGS.png"
+avatar: "/img/avatar-icon.png"
+#avatar: "/img/MartinStufiGS.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -113,7 +113,7 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "Europe/Prague"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
