--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
-
+google_analytics: "UA-102572059-1"
 # Google Tag Manager ID
 #gtm: ""
 
